Add contact number type route #3
